fix alignment and js paths

--- a/css/ocal.css
+++ b/css/ocal.css
@@ -528,7 +528,7 @@ a.thumbnail {
 
 footer {
 	padding: 0;
-	margin-top: 20px;
+	margin: 20px 0 0 0;
 	font-size: 14px;
 	text-align: left;
 }
@@ -685,6 +685,7 @@ table td {
 	width: 280px;
 	height: 280px;
 	padding-bottom: 10px;
+	text-align: center;
 }
 
 .detail-image:hover ~ button {
